@@ -1,1 +1,3 @@
+Erno Kuvaja <jokke@ilujo.net>
+Erno Kuvaja <jokke@localhost.localdomain>
 jokke-ilujo <jokke@ilujo.net>
